[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/fonts.tres" type="DynamicFont" id=1]
[ext_resource path="res://sprites/coin_0.png" type="Texture" id=2]
[ext_resource path="res://sprites/coin_1.png" type="Texture" id=3]
[ext_resource path="res://sprites/coin_2.png" type="Texture" id=4]
[ext_resource path="res://scripts/title.gd" type="Script" id=5]
[ext_resource path="res://ui/theme.tres" type="Theme" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[node name="title" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="hbox" type="HBoxContainer" parent="."]
margin_top = 20.0
margin_right = 640.0
margin_bottom = 36.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="hbox"]
margin_right = 157.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "MARIO"
align = 1

[node name="score" type="Label" parent="hbox/name"]
margin_left = 28.0
margin_top = 20.0
margin_right = 108.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 1 )
text = "0000000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="hbox"]
margin_left = 161.0
margin_top = 1.0
margin_right = 318.0
margin_bottom = 15.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="hbox/Label5"]
margin_left = 55.0
margin_top = 15.0
margin_right = 67.0
margin_bottom = 38.0
theme = ExtResource( 6 )
text = "x"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coinNum" type="Label" parent="hbox/Label5/Label4"]
margin_left = 15.0
margin_top = 4.0
margin_right = 47.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin" type="AnimatedSprite" parent="hbox/Label5/Label4"]
position = Vector2( -12, 3 )
frames = SubResource( 1 )
frame = 3
playing = true
centered = false

[node name="world" type="Label" parent="hbox"]
margin_left = 322.0
margin_right = 479.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "world"
align = 1
uppercase = true

[node name="level" type="Label" parent="hbox/world"]
margin_left = 49.0
margin_top = 20.0
margin_right = 97.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 1 )
text = "1-1"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timeLable" type="Label" parent="hbox"]
margin_left = 483.0
margin_right = 640.0
margin_bottom = 16.0
grow_horizontal = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "time"
align = 1
uppercase = true

[node name="time" type="Label" parent="hbox/timeLable"]
margin_left = 55.0
margin_top = 20.0
margin_right = 103.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 1 )
text = "000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
